--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
   <string name="app_name">MMKeyboard</string>
+  <string name="title_activity_main">MM Keyboard</string>
+
+  <string name="navigation_drawer_open">Open navigation drawer</string>
+  <string name="navigation_drawer_close">Close navigation drawer</string>
+
+  <string name="action_settings">Settings</string>
+  <string name="sNav_home">Home</string>
+  <string name="sNav_settings">Settings</string>
+  <string name="sNav_share">Share</string>
+  <string name="sNav_about">About</string>
+  <string name="sNav_openSource">Open Source</string>
+  <string name="sNav_aboutMe">About Me</string>
 </resources>
