Added the BottomDevelopBy View in Java.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
   <string name="sNav_aboutMe">About Me</string>
 
   <string name="devWithBy1">Developed with</string>
+  <string name="love">Love</string>
   <string name="devWithBy2">by GyanendroKh</string>
 
   <string name="home_not_setup">The keyboard has not been properly setup.</string>
