Added the AboutMeFragmet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,10 @@
   <string name="devWithBy2">by GyanendroKh</string>
 
   <string name="home_not_setup">The keyboard has not been properly setup.</string>
+  <string name="click_here_to_setup">Click Here to SetUp</string>
 
-  <string name="about">This is a simple keyboard for Meitei Mayek.\nThis is a part of a larger project (currently under development). A project which tends to develop some advanced apps like English-to-Manipuri translator, Manipuri Dictionary, etc.</string>
-  <string name="about_compat_body">This keyboard may not work on some older devices. Old version of Android (usually 4.4 and below) doesn\'t support the Meitei Mayek Font by default but most of the newer devices does except for some.\nBy \"not work\" means that Meitei Mayek Font may not be rendered when you type but it will still render it perfectly on the keyboard itself and this application.\nIf you have an older version device and the font doesn\'t render at all, you can install the font directly on your device.</string>
+  <string name="about">This is a simple keyboard for Meitei Mayek.\nThis project is an OpenSource Project developed just to teach others and to help in the development of our Meitei Culture on the way of Technology.</string>
+  <string name="about_compat_body">This keyboard may not work on some older devices. Old version of Android (usually 4.4 and below) doesn\'t support the Meitei Mayek Font by default but most of the newer devices does except for some.\nBy \"not work\" I mean that Meitei Mayek Font may not be rendered when you type but it will still render it perfectly on the keyboard itself and this application.\nIf you have an older version device and the font doesn\'t render at all, you can install the NotoSansMeiteiMayek Font directly on your device.</string>
   <string name="about_developer">I (Gyanendro Kh) developed this app just for fun.\nIf any complaint or feedback, feel free to contact me.</string>
 
   <string name="version">v0.2.1</string>
@@ -32,6 +33,4 @@
   <string name="dev_con_fb">Facebook</string>
   <string name="dev_con_gmail">Gmail</string>
   <string name="dev_con_github">Github</string>
-  <string name="click_here_to_setup">Click Here to SetUp</string>
-
 </resources>
