Fixed some issues on the MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
   <string name="app_name">MM Keyboard</string>
   <string name="title_activity_main">MM Keyboard</string>
   <string name="title_about_me">About Me</string>
+  <string name="title_open_source">Open Source</string>
 
   <string name="splash_welcome">Welcome to Meitei Mayek Keyboard!</string>
 
