--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
   <string name="app_name">MM Keyboard</string>
+  <string name="app_full_name">Meitei Mayek Keyboard</string>
   <string name="title_activity_main">MM Keyboard</string>
   <string name="title_about_me">About Me</string>
   <string name="title_open_source">Open Source</string>
@@ -19,6 +20,9 @@
   <string name="devWithBy1">Developed with</string>
   <string name="love">Love</string>
   <string name="devWithBy2">by GyanendroKh</string>
+
+  <string name="devBy">Developed by GyanendroKh</string>
+  <string name="copyright">Copyright &#169; 2017&#8211;18 GyanendroKh</string>
 
   <string name="home_try_title">Try out the Keyboard here…</string>
 
