--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
   <string name="dev_con_github">Github</string>
 
   <string name="open_source_text">This application is an OpenSource Application.\nThe Source Code for this application is hosted on Github. Anyone who wish to contribute can send a pull request. Let\'s develop this application together, help me make it better.</string>
+  <string name="osLicenseTitle">License</string>
+  <string name="os_license">Copyright 2017-2018 GyanendroKh\nLicensed under the Apache License,\nVersion 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
   <string name="link_to_github">Link to Github</string>
 
   <string name="placeholder">Lorem Ipsum</string>
